[package]
name = "hid-replay"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hid-replay"
description = "HID device emulation utility"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
uhid-virt = "0.0.7"
glob = "0.3.1"
nix = "0.28.0"
